--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -36,6 +36,7 @@
     font-size: 16px;
     line-height: 1.6;
     color: #030a06;
+    margin-bottom: 48px;
 }
 
 .list-section-advantages {
@@ -79,3 +80,13 @@
     color: #030a06;
     text-align: left;
 }
+
+
+
+
+
+
+
+
+
+
