--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="section-advantages" id="hero">
+<section class="section-advantages" id="advantages">
   <div class="container container-advantages">
     <h3 class="subtitle">Переваги</h3>
     <h2 class="title-advantages">Чому обрати нас?</h2>
