--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,10 +7,10 @@
       </a>
       <ul class="nav-list d-none">
         <li class="nav-item">
-          <a class="nav-link" href="#about">Про нас</a>
+          <a class="nav-link" href="#hero">Про нас</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#hero">Переваги</a>
+          <a class="nav-link" href="#advantages">Переваги</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#assortement">Асортимент</a>
@@ -67,10 +67,10 @@
       <nav class="mobile-nav">
         <ul class="mobile-nav-list">
           <li class="mobile-nav-item">
-            <a href="#about" class="mobile-nav-link current">Про нас</a>
+            <a href="#hero" class="mobile-nav-link current">Про нас</a>
           </li>
           <li class="mobile-nav-item">
-            <a href="#hero" class="mobile-nav-link">Переваги</a>
+            <a href="#advantages" class="mobile-nav-link">Переваги</a>
           </li>
           <li class="mobile-nav-item">
             <a href="#assortement" class="mobile-nav-link">Асортимент</a>
