--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -3,13 +3,6 @@
     background: #ebf8ed;
 }
 
-.container-advantages {
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-    max-width: 320px;
-}
-
 .subtitle {
     font-family: "Fira Sans", sans-serif;
     font-weight: 600;
@@ -41,7 +34,6 @@
 
 .list-section-advantages {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     gap: 48px;
     margin: 0 auto;
@@ -53,12 +45,14 @@
     text-align: center;
 }
 
-.list-advantages-item picture {
+.advantages-picture {
     display: block;
     border-radius: 32px;
-    width: 100%;
+    max-width: 100%;
     height: auto;
     margin-bottom: 8px;
+    height: auto;
+    object-fit: cover;
 }
 
 .subtitle-advantages {
