--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -3,6 +3,13 @@
     background: #ebf8ed;
 }
 
+.container-advantages {
+    max-width: 320px;
+    margin: 0 auto;
+    width:100%;
+    padding: 0 16px;
+}
+
 .subtitle {
     font-family: "Fira Sans", sans-serif;
     font-weight: 600;
@@ -10,6 +17,7 @@
     line-height: 1.5;
     color: #030a06;
     margin-bottom: 12px;
+    
 }
 
 .title-advantages {
@@ -20,7 +28,7 @@
     letter-spacing: 0.01em;
     color: #030a06;
     margin-bottom: 20px;
-    flex-wrap: wrap;
+    max-width: 288px;
 }
 
 .advantages-text {
@@ -30,10 +38,13 @@
     line-height: 1.6;
     color: #030a06;
     margin-bottom: 48px;
+    max-width: 288px;
 }
 
 .list-section-advantages {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     gap: 48px;
     margin: 0 auto;
