--- a/src/css/container.css
+++ b/src/css/container.css
@@ -1,7 +1,7 @@
 /* Базові стилі для Mobile (320px — 767px) */
 .container {
-  min-width: 320px;
-  max-width: 100%;
+  width: 100%;
+  max-width: 320px;
   margin: 0 auto;
   padding: 0 16px;
 
