--- a/src/partials/assortment.html
+++ b/src/partials/assortment.html
@@ -2,7 +2,7 @@
 
 <!-- #region-assortment -->
 
-<section class="assortment">
+<section class="assortment" id="assortment">
     <div class="container">
         <h2 class="assortment-title">Наші сумки</h2>
         <ul class="assortment-ul">
