--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,3 +1,31 @@
-<section>
-    
+<section class="hero-section">
+  <div class="container hero-container">
+
+    <div class="hero-content">
+      <h1 class="hero-title">
+        EcoTote — Стиль, що не шкодить планеті
+      </h1>
+
+      <p class="hero-text">
+        Екологічні сумки для тих, хто дбає про майбутнє. Обирайте стиль та відповідальність разом з EcoTote.
+      </p>
+
+      <a href="#assortment" class="hero-button">
+        Купити зараз
+      </a>
+    </div>
+
+    <div class="hero-image-wrapper">
+      <picture>
+            <source media="(min-width: 1440px)"
+                srcset="./img/hero/hero-laptop-2x.jpg 2x, ./img/hero/hero-laptop-1x.jpg 1x">
+            <source media="(min-width: 768px)"
+                srcset="./img/hero/hero-tablet-2x.jpg 2x, ./img/hero/hero-tablet-1x.jpg 1x">
+            <source media="(max-width: 767px)"
+                srcset="./img/hero/hero-mobile-2x.jpg 2x, ./img/hero/hero-mobile-1x.jpg 1x">
+            <img src="./img/hero/hero-mobile-1x.jpg" alt="hero-img" width="288">
+        </picture>
+    </div>
+
+  </div>
 </section>
