--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -3,11 +3,29 @@
     background: #ebf8ed;
 }
 
+@media screen and (min-width: 768px) {
+.section-advantages {
+    padding: 64px 0;
+}
+}
+
 .container-advantages {
     max-width: 320px;
     margin: 0 auto;
     width:100%;
-    padding: 0 16px;
+}
+
+@media screen and (min-width: 768px) {
+    .container-advantages {
+     max-width: 704px;
+
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .container-advantages {
+        max-width: 1440px;
+    }
 }
 
 .subtitle {
@@ -16,8 +34,13 @@
     font-size: 16px;
     line-height: 1.5;
     color: #030a06;
-    margin-bottom: 12px;
-    
+    margin-bottom: 12px;   
+}
+
+@media screen and (min-width: 768px) {
+    .subtitle {
+        margin-bottom: 16px;
+    }
 }
 
 .title-advantages {
@@ -31,6 +54,21 @@
     max-width: 288px;
 }
 
+@media screen and (min-width: 768px) {
+    .title-advantages {
+        margin-bottom: 24px;
+        max-width: 704px;
+        margin-bottom: 24px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .title-advantages {
+        max-width: 768px;
+        font-size: 48px;
+    }
+}
+
 .advantages-text {
     font-family: "Fira Sans", sans-serif;
     font-weight: 400;
@@ -39,6 +77,21 @@
     color: #030a06;
     margin-bottom: 48px;
     max-width: 288px;
+}
+
+@media screen and (min-width: 768px) {
+    .advantages-text {
+        font-size: 18px;
+        max-width: 704px;
+        margin-bottom: 32px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .advantages-text {
+        margin-bottom: 80px;
+        max-width: 768;
+    }
 }
 
 .list-section-advantages {
@@ -50,20 +103,64 @@
     margin: 0 auto;
 }
 
+@media screen and (min-width: 768px) {
+.list-section-advantages {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 24px;
+}
+}
+
+@media screen and (min-width: 1440px) {
+    .list-section-advantages {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: nowrap;
+        flex-direction: row;
+    }
+}
+
 .list-advantages-item {
     display: block;
     max-width: 288px;
     text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+.list-advantages-item:nth-child(3) {
+ grid-column: 1 / 3;
+}
+
+.list-advantages-item {
+    display: block;
+    max-width: 100%;
+}
+}
+
+@media screen and (min-width: 1440px) {
+.list-advantages-item {
+    width: calc((100% - 48px) / 3);
+}
+}
+
 .advantages-picture {
     display: block;
     border-radius: 32px;
     max-width: 100%;
-    height: auto;
     margin-bottom: 8px;
     height: auto;
     object-fit: cover;
+    width: 288px;
+    height: 198px;
+}
+
+@media screen and (min-width: 768px) {
+    .advantages-picture {
+        display: block;
+        width: 100%;
+        height: auto;
+        margin-bottom: 32px;
+    }
 }
 
 .subtitle-advantages {
@@ -75,6 +172,13 @@
     color: #030a06;
     margin-bottom: 8px;
     text-align: left;
+}
+
+@media screen and (min-width: 1440) {
+.subtitle-advantages {
+    font-size: 32px;
+    margin-bottom: 24px;
+}
 }
 
 .subtitle-advantages-text {
